# birb

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  server.js
src/: camera.rs  canvas_renderer.rs  lib.rs  material.rs  ray.rs  scene.rs  scene_loader.rs  sphere.rs  tracer.rs
