[package]
name = "canvas"
version = "0.1.0"
authors = ["christopher.james.pearce@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
nalgebra = "0.18.0"
rand = "0.6.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'ImageData',
  'HtmlCanvasElement',
  'Window',
]
