[package]
name = "canvas"
version = "0.1.0"
authors = ["christopher.james.pearce@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "tracer_bench"
harness = false

[dependencies]
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
nalgebra = "0.18.0"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'ImageData',
  'HtmlCanvasElement',
  'Window',
  'Performance',
  'console'
]
